css/styles.css
body,html{
    color: white;
    font-family: "Monserrat", sans-serif;
    background-color: black;
    text-align: center;
    box-sizing: border-box;
    margin: 8px 0 0;
    background-image: url("../img/space.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    width: 100%;
}

#main-content{
    background: rgba(0,0,0,0.7);
    backdrop-filter: blur(8px);

}


header{
    background-color: transparent;
    font-family: 'Major Mono Display', monospace;
  }

a{
    text-decoration: none;
    color: white;
}

footer{
     background-color: #1b1e21;
 }

hr{
    border: 0;
    border-top: 6px dotted #bbbbbb;
    width: 3%;
    margin-block-start: 3em;
    margin-block-end: 2em;
}

.background {
}

#header-left img{
    vertical-align:middle;
    height: 80px;
    border-radius: 50px;
}

#header-left h1{
    display: inline-block;
    vertical-align:middle;
}

#header-right ul{
    list-style: none;
    padding-inline-start: 0;
}

#header-right li{
    font-size: 1.2em;
    font-weight: bolder;
    padding: 10px 30px;
}

#header-right li:hover{
    background-color: #0a043c;
    transition: 0.7s;
}

#main-content{
    margin-bottom: 20px;
}

#intro{

}

#part-1, #part-2{
    padding-top: 70px;
    margin-bottom: 30px;
}

#part-1 > h3{
    color: #bbbbbb;
    text-transform: uppercase;
}

#part-1 > h1{
    font-size: 2rem;
    line-height: 0;
    margin-block-start: 0.60em;/* line height property */
    margin-block-end: 0.60em;
}

#part-1 > h1 > span{
    font-size: 2rem;
    font-family: 'Major Mono Display', monospace;
    color: #03506f;
}

#part-1 > h2{
    font-size: 0.8rem;
    font-weight: normal;
    margin-bottom: 30px;
}

.button{
    padding: 20px 40px;
    margin-right: 10px;
    border-radius: 4px;
}

.button:hover{
    box-sizing: border-box;
    box-shadow: 0 0 5px white;
}

.button-1{
    background-color: #0f4c75;
}

.button-2{
    background-color: #3282b8;
}

#part-2 #img-jumbo{
    width: 70%;
    max-width: 100%;
    border-radius: 400px;
}

.shadow-text{
    text-shadow: 24px 18px 2px #0f4c75;
    margin-bottom: 60px;
}

#about{
}


#about > img{
    height: 200px;
    max-width: 100%;
    border-radius: 500px;
}

#about > p{
    margin: 10px auto;
    width: 50%;
}

#copyright{
}

.single-prj{
    text-align: left;
    margin: 0 80px;
}

.single-prj > img{
    margin: 0 20px;
    height: 100px;
    max-width: 100%;
    border-radius: 100px;
}

#contact{
}

form{
    padding: 10px 10px;
    display: inline-block;
    background-image: url("../img/space.png");
    border-radius: 20px;
}

input{
    margin-top: 10px;
    margin-bottom: 20px;
}

/* Small devices (landscape phones, 576px and up)*/
@media (min-width: 576px) {
}

/* Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {

}

/* Large devices (desktops, 992px and up) */
@media (min-width: 992px) {
    .clearfix:after{
        content: "";
        display: block;
        clear: both;
    }

    #header-right li{
        display: inline-block;
        padding: 25px 30px;
    }

    #header-right{
        float: right;
    }

    #header-left{
        float: left;
        margin-top: 5px;
        margin-left: 20px;
    }

    #header-left img{
    }

    #part-2{
        float: right;
        width: 50%;
    }

    #part-1 {
        float: right;
        width: 50%;
    }

    .single-prj:nth-child(odd) img{
        float: left;
    }

    .single-prj:nth-child(even) img{
        float: right;
    }

}

/* Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {

}

